--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "cod": "bin/cli.js"
   },
   "scripts": {
-    "test": "make"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -29,14 +29,15 @@
   "homepage": "https://github.com/namuol/cod",
   "devDependencies": {
     "coffee-script": "^1.7.1",
-    "mocha": "^1.20.1",
     "pegjs": "^0.8.0",
     "gulp-peg": "^0.1.1",
     "gulp-template": "^0.1.1",
     "gulp": "^3.8.1",
     "gulp-coffee": "^2.0.1",
     "gulp-util": "^2.2.17",
-    "gulp-header": "^1.0.2"
+    "gulp-header": "^1.0.2",
+    "tape": "^2.13.3",
+    "tap": "^0.4.11"
   },
   "dependencies": {
     "docopt": "^0.4.0",
